fixed meeting cta alignment

--- a/css/scss/main.scss
+++ b/css/scss/main.scss
@@ -1702,11 +1702,6 @@ footer {
   }
 
   main {
-    header {
-      h1 {
-        margin-block-start: 2rem;
-      }
-    }
     section {
       .split {
         gap: 4rem;
